// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders correctly 1`] = `
<div
  className="image -expand"
>
  <img
    className="image--native"
    loading="lazy"
    sizes="(min-width:3200px) 800px, 1200px"
    src="https://source.unsplash.com/collection/2102317/1000x650?sig=40349"
  />
</div>
`;

exports[`<Image /> renders correctly with optional props 1`] = `
<div
  className="image class -small"
>
  <img
    className="image--native"
    loading="lazy"
    sizes="(min-width:3200px) 800px, 1200px"
    src="https://source.unsplash.com/collection/2102317/1000x650?sig=40349"
  />
</div>
`;
